--- a/topino/topino.qrc
+++ b/topino/topino.qrc
@@ -1,3 +1,28 @@
 <RCC>
-    <qresource prefix="/"/>
+    <qresource prefix="/">
+        <file>ui/darkstyle/darkstyle.qss</file>
+        <file>ui/darkstyle/icon_close.png</file>
+        <file>ui/darkstyle/icon_restore.png</file>
+        <file>ui/darkstyle/icon_undock.png</file>
+        <file>ui/darkstyle/icon_branch_closed.png</file>
+        <file>ui/darkstyle/icon_branch_end.png</file>
+        <file>ui/darkstyle/icon_branch_more.png</file>
+        <file>ui/darkstyle/icon_branch_open.png</file>
+        <file>ui/darkstyle/icon_vline.png</file>
+        <file>ui/darkstyle/icon_checkbox_checked.png</file>
+        <file>ui/darkstyle/icon_checkbox_indeterminate.png</file>
+        <file>ui/darkstyle/icon_checkbox_unchecked.png</file>
+        <file>ui/darkstyle/icon_checkbox_checked_pressed.png</file>
+        <file>ui/darkstyle/icon_checkbox_indeterminate_pressed.png</file>
+        <file>ui/darkstyle/icon_checkbox_unchecked_pressed.png</file>
+        <file>ui/darkstyle/icon_checkbox_checked_disabled.png</file>
+        <file>ui/darkstyle/icon_checkbox_indeterminate_disabled.png</file>
+        <file>ui/darkstyle/icon_checkbox_unchecked_disabled.png</file>
+        <file>ui/darkstyle/icon_radiobutton_checked.png</file>
+        <file>ui/darkstyle/icon_radiobutton_unchecked.png</file>
+        <file>ui/darkstyle/icon_radiobutton_checked_pressed.png</file>
+        <file>ui/darkstyle/icon_radiobutton_unchecked_pressed.png</file>
+        <file>ui/darkstyle/icon_radiobutton_checked_disabled.png</file>
+        <file>ui/darkstyle/icon_radiobutton_unchecked_disabled.png</file>
+    </qresource>
 </RCC>
