Added toolbox and round rubber selection

--- a/topino/topino.qrc
+++ b/topino/topino.qrc
@@ -24,5 +24,7 @@
         <file>ui/darkstyle/icon_radiobutton_unchecked_pressed.png</file>
         <file>ui/darkstyle/icon_radiobutton_checked_disabled.png</file>
         <file>ui/darkstyle/icon_radiobutton_unchecked_disabled.png</file>
+        <file>ui/toolicons/cursor.png</file>
+        <file>ui/toolicons/inlet.png</file>
     </qresource>
 </RCC>
