--- a/topino/topino.qrc
+++ b/topino/topino.qrc
@@ -25,6 +25,7 @@
         <file>ui/darkstyle/icon_radiobutton_checked_disabled.png</file>
         <file>ui/darkstyle/icon_radiobutton_unchecked_disabled.png</file>
         <file>ui/toolicons/cursor.png</file>
+        <file>ui/toolicons/ruler.png</file>
         <file>ui/toolicons/inlet.png</file>
     </qresource>
 </RCC>
