--- a/topino/ui/mainwindow.ui
+++ b/topino/ui/mainwindow.ui
@@ -13,119 +13,7 @@
   <property name="windowTitle">
    <string>Topino</string>
   </property>
-  <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="gridLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>50</y>
-      <width>143</width>
-      <height>96</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="layoutToolbox">
-     <property name="leftMargin">
-      <number>5</number>
-     </property>
-     <property name="topMargin">
-      <number>5</number>
-     </property>
-     <property name="rightMargin">
-      <number>5</number>
-     </property>
-     <property name="bottomMargin">
-      <number>5</number>
-     </property>
-     <property name="spacing">
-      <number>0</number>
-     </property>
-     <item row="3" column="0">
-      <widget class="QToolButton" name="toolButton">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Select</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../topino.qrc">
-         <normaloff>:/ui/toolicons/cursor.png</normaloff>:/ui/toolicons/cursor.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>24</width>
-         <height>24</height>
-        </size>
-       </property>
-       <property name="popupMode">
-        <enum>QToolButton::DelayedPopup</enum>
-       </property>
-       <property name="toolButtonStyle">
-        <enum>Qt::ToolButtonIconOnly</enum>
-       </property>
-       <property name="autoRaise">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QToolButton" name="toolButton_2">
-       <property name="text">
-        <string>Fit best</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../topino.qrc">
-         <normaloff>:/ui/toolicons/inlet.png</normaloff>:/ui/toolicons/inlet.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>24</width>
-         <height>24</height>
-        </size>
-       </property>
-       <property name="toolButtonStyle">
-        <enum>Qt::ToolButtonIconOnly</enum>
-       </property>
-       <property name="autoRaise">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QLabel" name="label">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Inlet &amp; Grid</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Minimum</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>5</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </widget>
-  </widget>
+  <widget class="QWidget" name="centralWidget"/>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
@@ -189,16 +77,20 @@
    <addaction name="action_Open"/>
    <addaction name="action_Save"/>
    <addaction name="action_Quit"/>
-   <addaction name="separator"/>
-   <addaction name="action_AboutTopino"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QToolBar" name="toolbox">
    <property name="windowTitle">
-    <string>Toolbox</string>
+    <string>Tools</string>
    </property>
    <property name="allowedAreas">
-    <set>Qt::LeftToolBarArea|Qt::RightToolBarArea</set>
+    <set>Qt::AllToolBarAreas</set>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>32</width>
+     <height>24</height>
+    </size>
    </property>
    <attribute name="toolBarArea">
     <enum>LeftToolBarArea</enum>
@@ -206,6 +98,9 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="action_selection_tool"/>
+   <addaction name="action_ruler_tool"/>
+   <addaction name="action_inlet_tool"/>
   </widget>
   <widget class="QToolBar" name="zoomBar">
    <property name="windowTitle">
@@ -280,7 +175,7 @@
   </action>
   <action name="action_AboutQt">
    <property name="icon">
-    <iconset theme="help-about">
+    <iconset theme="help-info">
      <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
@@ -289,7 +184,7 @@
   </action>
   <action name="action_AboutTopino">
    <property name="icon">
-    <iconset theme="help-about">
+    <iconset theme="help-info">
      <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
@@ -342,6 +237,47 @@
     <string>O&amp;riginal size</string>
    </property>
   </action>
+  <actiongroup name="action_group_tools">
+   <action name="action_selection_tool">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+    <property name="icon">
+     <iconset resource="../topino.qrc">
+      <normaloff>:/ui/toolicons/cursor.png</normaloff>:/ui/toolicons/cursor.png</iconset>
+    </property>
+    <property name="text">
+     <string>&amp;Selection tool</string>
+    </property>
+   </action>
+   <action name="action_ruler_tool">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="icon">
+     <iconset resource="../topino.qrc">
+      <normaloff>:/ui/toolicons/ruler.png</normaloff>:/ui/toolicons/ruler.png</iconset>
+    </property>
+    <property name="text">
+     <string>Ruler tool</string>
+    </property>
+   </action>
+   <action name="action_inlet_tool">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="icon">
+     <iconset resource="../topino.qrc">
+      <normaloff>:/ui/toolicons/inlet.png</normaloff>:/ui/toolicons/inlet.png</iconset>
+    </property>
+    <property name="text">
+     <string>Inlet tool</string>
+    </property>
+   </action>
+  </actiongroup>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
