--- a/topino/ui/mainwindow.ui
+++ b/topino/ui/mainwindow.ui
@@ -568,7 +568,7 @@
        <item row="10" column="0" colspan="4">
         <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0">
          <item>
-          <widget class="QToolButton" name="toolButton_7">
+          <widget class="QToolButton" name="toolEditImage">
            <property name="text">
             <string>...</string>
            </property>
@@ -1323,6 +1323,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>toolEditImage</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onToolEditImage()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>731</x>
+     <y>508</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>471</x>
+     <y>369</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onQuit()</slot>
@@ -1338,5 +1354,6 @@
   <slot>onToolSelection()</slot>
   <slot>onToolRuler()</slot>
   <slot>onToolInletCircle()</slot>
+  <slot>onToolEditImage()</slot>
  </slots>
 </ui>
