Implemented processing images on data/model level

--- a/topino/topino.qrc
+++ b/topino/topino.qrc
@@ -34,5 +34,6 @@
         <file>ui/darkstyle/darkstyle.cpp</file>
         <file>ui/darkstyle/darkstyle.h</file>
         <file>ui/toolicons/image.png</file>
+        <file>ui/toolicons/image_edit.png</file>
     </qresource>
 </RCC>
