--- a/topino/ui/imageeditdialog.ui
+++ b/topino/ui/imageeditdialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Prepare image for analysis</string>
+   <string>Preprocess image for analysis</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
